# tracers

./: .cirrus.yml  .gitignore  .gitmodules  .tmuxp.yaml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  azure-pipelines.yml
examples/: simple.rs  submodules.rs
examples/simple/: Cargo.toml  build.rs
examples/simple/src/: main.rs
libelf-sys/: Cargo.toml  build.rs
libelf-sys/src/: lib.rs  libelf.rs
libstapsdt-sys/: Cargo.toml  build.rs
libstapsdt-sys/src/: lib.rs  test-libstapsdt.c
probers/: Cargo.toml  build.rs
probers-build/: Cargo.toml
probers-build/src/: lib.rs
probers-codegen/: Cargo.toml
probers-codegen/src/: argtypes.rs  build_rs.rs  cache.rs  cargo.rs  deps.rs  error.rs  hashing.rs  lib.rs  probe.rs  probe_arg.rs  probe_call.rs  probe_discovery.rs  probe_spec.rs  proc_macros.rs  provider.rs  provider_discovery.rs  provider_init.rs  syn_helpers.rs  testdata.rs  visitor.rs
probers-codegen/src/spec/: mod.rs  probe.rs  probe_arg.rs  probe_call.rs  provider.rs  provider_init.rs
probers-codegen/testdata/complexlib/: Cargo.toml
probers-codegen/testdata/errors/src/: main.rs
probers-codegen/testdata/errors/src/child_mod/: grandchild_mod.rs  mod.rs
probers-codegen/testdata/simplebin/: Cargo.toml
probers-codegen/testdata/simplelib/: Cargo.toml
probers-codegen/testdata/simplelib/src/: lib.rs
probers-core/: Cargo.toml  build.rs
probers-core/src/: argtypes.rs  lib.rs  probes.rs
probers-core/src/argtypes/: bool.rs  cstring.rs  custom.rs  display.rs  func.rs  int.rs  native.rs  option.rs  pointer.rs  refs.rs  reftype.rs  string.rs
probers-dyn-noop/: Cargo.toml
probers-dyn-noop/src/: provider.rs
probers-dyn-stap/: Cargo.toml  build.rs
probers-dyn-stap/src/: provider.rs  tracer.rs
probers-macros/: Cargo.toml
probers-macros-hack/: Cargo.toml
probers-macros-hack/src/: lib.rs
probers-macros/src/: lib.rs  probe_spec.rs  syn_helpers.rs
probers-macros/tests/: sandbox.rs
probers-noop/: Cargo.toml  build.rs
probers-noop/src/: lib.rs  probe.rs  tracer.rs
probers-stap/: Cargo.toml  build.rs
probers-stap/src/: lib.rs  probe.rs  provider.rs  tracer.rs
probers-stap/tests/: simple.rs
probers/examples/: simple.rs  submodules.rs
probers/src/: lib.rs
probers/tests/: sandbox.rs
scripts/: build.bat  build.sh  test.bat  test.sh
src/: lib.rs
tests/: sandbox.rs  simple.rs
tracers/: Cargo.toml  build.rs
tracers-build/: Cargo.toml  askama.toml
tracers-build/src/: lib.rs
tracers-codegen/: Cargo.toml
tracers-codegen/src/: argtypes.rs  build_rs.rs  cache.rs  deps.rs  error.rs  hashing.rs  lib.rs  proc_macros.rs  serde_helpers.rs  syn_helpers.rs  testdata.rs
tracers-codegen/src/spec/: mod.rs  probe.rs  probe_arg.rs  probe_call.rs  provider.rs  provider_init.rs
tracers-codegen/templates/: probe_wrapper.c  provider_wrapper.c  provider_wrapper.rs  sys_sdt.h
tracers-codegen/templates/lttng/: provider.tp  provider_wrapper.cpp
tracers-codegen/testdata/complexlib/: Cargo.toml  build.rs
tracers-codegen/testdata/complexlib/src/: lib.rs
tracers-codegen/testdata/complexlib/tests/: test1.rs
tracers-codegen/testdata/complexlib/tests/static/: mod.rs
tracers-codegen/testdata/errors/: Cargo.toml
tracers-codegen/testdata/errors/tests/: compile_errors.rs
tracers-codegen/testdata/errors/tests/with_errors/: mod.rs
tracers-codegen/testdata/simplebin/src/: main.rs
tracers-codegen/testdata/simplelib/: Cargo.toml  build.rs
tracers-codegen/testdata/simplelib/src/: child_module.rs  lib.rs
tracers-core/: Cargo.toml  build.rs
tracers-core/src/: argtypes.rs  dynamic.rs  lib.rs  probes.rs
tracers-core/src/argtypes/: int.rs  pointer.rs  string.rs
tracers-dyn-noop/: Cargo.toml
tracers-dyn-noop/src/: probe.rs  provider.rs  tracer.rs
tracers-dyn-stap/: Cargo.toml  build.rs
tracers-dyn-stap/src/: lib.rs  probe.rs  provider.rs  tracer.rs
tracers-libelf-sys/: Cargo.toml  bindgen.sh  update-elfutils.sh
tracers-libelf-sys/src/: lib.h  lib.rs
tracers-libstapsdt-sys/: Cargo.toml  LICENSE  bindgen.sh  build.rs
tracers-libstapsdt-sys/src/: lib.h  libstapsdt.rs
tracers-macros/: Cargo.toml
tracers-macros-hack/: Cargo.toml
tracers-macros-hack/src/: lib.rs
tracers-macros/src/: lib.rs
tracers/benches/: probe_firing.rs
tracers/examples/: simple.rs  submodules.rs
tracers/src/: lib.rs
tracers/tests/: custom_provider_names.rs  sandbox.rs  simple.rs
