[workspace]
members = [
    "libelf-sys",
    "libstapsdt-sys",
    "tracers-build",
    "tracers-codegen",
    "tracers-core",
    "tracers-macros",
    "tracers-macros-hack",
    "tracers-dyn-noop",
    "tracers-dyn-stap",
    "tracers",

    "examples/simple"
]

[profile.bench]
# Compile benchmark builds with debug symbols
debug = true

[profile.test]
# Compile test builds with debug symbols
debug = true

[profile.release]
# Compile release builds with debug symbols
debug = true
