[workspace]
members = [
    "tracers-libelf-sys",
    "tracers-libstapsdt-sys",
    "tracers-build",
    "tracers-codegen",
    "tracers-core",
    "tracers-macros",
    "tracers-macros-hack",
    "tracers-dyn-noop",
    "tracers-dyn-stap",
    "tracers",

    "examples/simple"
]

[profile.bench]
debug = true
#lto = true

[profile.test]
debug = true

[profile.release]
debug = true
#lto = true
