[package]
name = "probers-codegen"
version = "0.1.0"
authors = ["Adam Nelson <anelson@users.noreply.github.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

#### WARNING ####
#################
#
# It's critical that any changes made here are also made to `probers-build/Cargo.toml`
# which is maintained as an exact duplicate of this crate as a workaround for a Cargo
# bug
[dependencies]
quote = "0.6.11"
failure = "0.1.5"
once_cell = "0.1.8"
proc-macro2 = "0.4"
heck = "0.3"
cargo_metadata = "0.7.4"
lazy_static = "1.3"
fasthash = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
askama = "0.8"

probers-core = { path = "../probers-core", version = "0.1.0" }

[features]

default = []
experimental = []

[dependencies.syn]
# We need some optional features of syn in order to implement the macro
version = "0.15"
features = ["full", "visit", "parsing", "extra-traits"]

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
tempfile = "3"
fs_extra = "1"
