[package]
name = "probers-stap"
version = "0.1.0"
authors = ["Adam Nelson <anelson@users.noreply.github.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[features]
# by default, building the stap provider is disabled.  It must be explicitly enabled
default = []

# if this feature is enabled, then the build.rs will try to build the stap provider's
# dependencies, libstapstd-sys (and, transitively, libelf-sys).
# if the build fails, this crate's build will still succeed, but the stap provider's code
# will not be included in the resulting crate.
#
# The success or failure of the build will be communicated via a variable in cargo,
# which dependent crates can resolve with DEP_PROBERS_STAP_SUCCEEDED
enabled = ["libstapsdt-sys/enabled"]

# If this feature is enabled, it implies `enabled`, and also will cause the build to fail if
# the stap provider cannot be built
required = ["libstapsdt-sys/required"]

[dependencies]
probers-core = { path = "../probers-core", version = "0.1.0" }
libstapsdt-sys = { path = "../libstapsdt-sys", version = "0.1.0", optional = true }
failure = "0.1.5"
once_cell = "0.1.8"

[build-dependencies]
failure = "0.1.5"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
libc = "0.2.48"

