[package]
name = "probers"
version = "0.1.0"
authors = ["Adam Nelson <anelson@users.noreply.github.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "experimental" }

[features]
default = []

# An optional feature will build binaries which are used to interact with the probing framework.  These are only useful
# as part of our CI tests, or when troubleshooting unexpected behavior with the probes
binaries = ["nom"]

[[bin]]
name = "testfire"
path = "src/bin/testfire.rs"
required-features = [ "binaries" ]

[dependencies]
failure = "0.1.5"
once_cell = "0.1.8"
probers-core = { path = "../probers-core", version = "0.1.0" }
probers-noop = { path = "../probers-noop", version = "0.1.0" }

nom = { version = "4.2.3", optional = true, features = ["verbose-errors"] }

[build-dependencies]
probers-build = { path = "../probers-build", version = "0.1.0" }

[dev-dependencies]
# Our integration tests and examples assume the probers-macros are available
probers-macros = { path = "../probers-macros", version = "0.1.0" }

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
probers-stap = { path = "../probers-stap", version = "0.1.0" }

