[package]
name = "probers"
version = "0.1.0"
authors = ["Adam Nelson <anelson@users.noreply.github.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "experimental" }

[features]
# By default, tracing is enabled and set to an automatically selected native implementation
default = ["enable-native-tracing"]

# To enable dynamic tracing requires it be explicitly activated.  Note this is mutually exclusive with
# enable-native-tracing
enable-dynamic-tracing = ["probers-dyn-stap/enabled", "probers-dyn-noop"]

# Native tracing is built in to the generators, it doesn't have any additional dependent crates
enable-native-tracing = []


force-dyn-stap = ["enable-dynamic-tracing", "probers-dyn-stap/required"]

force-dyn-noop = ["enable-dynamic-tracing", "probers-dyn-noop"]

# An optional feature will build binaries which are used to interact with the probing framework.  These are only useful
# as part of our CI tests, or when troubleshooting unexpected behavior with the probes
binaries = ["nom"]

[[bin]]
name = "testfire"
path = "src/bin/testfire.rs"
required-features = [ "binaries" ]

[dependencies]
failure = "0.1.5"
once_cell = "0.1.8"
probers-core = { path = "../probers-core", version = "0.1.0" }
probers-dyn-noop = { path = "../probers-dyn-noop", version = "0.1.0", optional = true }
probers-dyn-stap = { path = "../probers-dyn-stap", version = "0.1.0", optional = true }

nom = { version = "4.2.3", optional = true, features = ["verbose-errors"] }

[build-dependencies]
probers-build = { path = "../probers-build", version = "0.1.0" }
failure = "0.1.5"

[dev-dependencies]
# Our integration tests and examples assume the probers-macros are available
probers-macros = { path = "../probers-macros", version = "0.1.0" }


