[package]
name = "tracers-codegen"
version = "0.2.0"
authors = ["Adam Nelson <anelson@127.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
    Contains the compile-time code generation logic which powers the `probe` and `tracers` macros.

    Do not use this crate directly; see "tracers" for more information.
"""
repository = "https://github.com/anelson/tracers"

[dependencies]
askama = "0.8.0"
cargo_metadata = "0.9.0"
cc = "1.0.47"
darling = "0.10.2"
failure = "0.1.6"
heck = "0.3.1"
lazy_static = "1.4.0"
once_cell = "1.2.0"
pkg-config = "0.3.17"
proc-macro-crate = "0.1"
proc-macro2 = "1"
quote = "1"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
serde_str = "0.1.0"
strum = "0.16.0"
strum_macros = "0.16.0"
tempfile = "3.1.0"
twox-hash = "1.5.0"

tracers-core = { path = "../tracers-core", version = "0.2.0" }

[dependencies.syn]
# We need some optional features of syn in order to implement the macro
version = "1.0.8"
features = ["full", "visit", "parsing", "extra-traits"]

[features]

default = []
experimental = []

[dev-dependencies]
fs_extra = "1.1.0"
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"
tempfile = "3.1.0"

[target.'cfg(windows)'.dev-dependencies]
# Need to use Dunce to de-UNC the canonicalized paths on Windows
dunce = "1.0.0"
