[package]
name = "tracers-core"
version = "0.1.0"
authors = ["Adam Nelson <anelson@users.noreply.github.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[features]

# The default configuration does not compile any of the dynamic tracing features
default = []

# In addition to default, enables the dynamic tracing features to support dynamic tracing implementations like `libstapsdt` and others
dynamic = []

[dependencies]
failure = "0.1"
libc = "0.2"
strum = "0.15"
strum_macros = "0.15"

[build-dependencies]
failure = "0.1.5"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
libc = "0.2"

