[package]
name = "tracers-core"
version = "0.2.0"
authors = ["Adam Nelson <anelson@127.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
    Contains the core runtime component for tracing.  You should not ever use this crate directly; use the "tracers"
    crate instead
"""
repository = "https://github.com/anelson/tracers"

[features]

# The default configuration does not compile any of the dynamic tracing features
default = []

# In addition to default, enables the dynamic tracing features to support dynamic tracing implementations like `libstapsdt` and others
dynamic = []

[dependencies]
failure = "0.1.6"
libc = "0.2.65"
strum = "0.16.0"
strum_macros = "0.16.0"

[build-dependencies]
failure = "0.1.6"

[dev-dependencies]
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"
libc = "0.2.65"

