[package]
name = "tracers-libstapsdt-sys"
version = "0.1.0"
authors = ["Adam Nelson <anelson@127.io>"]
edition = "2018"
license = "MIT"
description = """
    Exposes libstapsdt to Rust code for programmatic creation of SystemTap user mode probes.

    Never use this crate directly; use `tracers` and let it determine the correct implementation at build time.
"""
repository = "https://github.com/anelson/tracers"
links = "stapsdt"

[features]
# by default, building libstapsdt is disabled.  It must be explicitly enabled
default = []

# if this feature is enabled, then the build.rs will try to build the libstapsdt binaries.
# if the build fails, this crate's build will still succeed
#
# The success or failure of the build will be communicated via a variable in cargo,
# which dependent crates can resolve with DEP_LIBELF_SYS_SUCCEEDED
enabled = ["tracers-libelf-sys/enabled", "libc"]

# If this feature is enabled, it implies `enabled`, and also will cause the build to fail if
# libstapsdt cannot be built
required = ["tracers-libelf-sys/required", "libc"]

[dependencies]
libc = { version = "0.2.65", optional = true }
tracers-libelf-sys = { path = "../libelf-sys", version = "0.1.0", optional = true }

[build-dependencies]
pkg-config = "0.3.17"
cc = "1.0.47"
glob = "0.3.0"
failure = "0.1.6"


