[package]
name = "tracers-macros"
version = "0.2.0"
authors = ["Adam Nelson <anelson@127.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Macros which generate tracers and the code that fires the tracers.  See the 'tracers' crate for further instructions"
repository = "https://github.com/anelson/tracers"

[dependencies]
proc-macro-hack = "0.5.11"
tracers-macros-hack = { path = "../tracers-macros-hack", version = "0.2.0" }

