[package]
name = "simple"
version = "0.1.0"
authors = ["Adam Nelson <anelson@users.noreply.github.com>"]
edition = "2018"

[dependencies]
tracers = { path = "../../tracers", version = "0.1.0" }
tracers-macros = { path = "../../tracers-macros", version = "0.1.0" }

[build-dependencies]
tracers-build = { path = "../../tracers-build", version = "0.1.0" }
